--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,5 +1,8 @@
 
     .status-bar{
+
+        width: 100%;
+        box-sizing: border-box;
         display: flex;
         justify-content: center;
         padding: 5px 3px;
