--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Noto+Sans+KR:wght@300&family=Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Noto+Sans+KR:wght@300&family=Open+Sans:wght@600&display=swap');
 @import "reset.css";
-@import "status-bar.css";
+@import "variable.css";
+/*components*/
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+/*screens*/
+@import "screens/login.css";
+
 body{
-    font-family: 'Open Sans', sans-serif;}
-
-.welcome-header{
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-}
-.welcome-header_title{
-    margin-bottom: 30px;
-    font-size: 25px;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.welcome-header_text{
-    width: 60%;
-    opacity: 0.7;
-}
