--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,11 +1,12 @@
 
     .status-bar{
-
+        position: fixed;
         width: 100%;
         box-sizing: border-box;
         display: flex;
         justify-content: center;
         padding: 5px 3px;
+
     }
     .status-bar_column{
         width:33%
