--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,10 +1,10 @@
 .status-bar{
-    position: fixed;
-    width: 100%;
-        box-sizing: border-box;
+        position: fixed;
+        top: 0;
         display: flex;
         justify-content: center;
         padding: 5px 3px;
+        width: 100%;
 }
 .nav{
     position: fixed;
