--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,13 @@
 /*components*/
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
-/*screens*/
+@import "components/screen-header.css";
+/*screens*/ 
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body{
     font-family: 'Open Sans', sans-serif;
+    color: #2e363e;
 height: 1000vh;}
 
