--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -8,12 +8,14 @@
     background-color: #f2f2f2 ;
 padding: 20px;
 font-size: 19px;
+box-sizing: border-box;
 }
 #friend-display-link i{
     color: rgba(0, 0, 0, 0.3);
     margin-right: 8px;
     margin-left: 15px;
 }
-.div{
-    position: relative;
+.friends-screen{
+    padding: 0px var(--horizontal-space);
+
 }
