--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -9,6 +9,7 @@
 padding: 20px;
 font-size: 19px;
 box-sizing: border-box;
+margin-top: 10px;
 }
 #friend-display-link i{
     color: rgba(0, 0, 0, 0.3);
@@ -16,6 +17,15 @@ box-sizing: border-box;
     margin-left: 15px;
 }
 .friends-screen{
-    padding: 0px var(--horizontal-space);
-
+    padding: var(--horizontal-space);
+}
+.friends-screen__channel{
+    margin-top: 25px;
+    border-top: var(--main-border);
+    padding-top: 10px;
+}
+.friends-screen__channel-header{
+    display: flex;
+    justify-content: space-between;
+     color: rgba(0, 0, 0, 0.5);
 }
