--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -2,23 +2,6 @@
     padding: 0px var(--horizontal-space);
     padding-top: 130px; 
 }
-.find-icons{
-    display: flex;
-   justify-content: space-between;
-}
-.find-icons__icon{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.find-icons__icon i{
-font-size: 35px;
-color:#1b1b1b;
-opacity: 90%;
-}
-.find-icons__icon span{
-    margin-top: 20px;
-}
 .screen__header__icons{
     position: relative;
 }
@@ -47,3 +30,75 @@ opacity: 90%;
     color: rgba(0, 0, 0, 0.5);
     font-size: 18px;
 }
+.open-chat__header{
+    display: flex;
+justify-content: space-between;
+    margin: 25px 0;
+  opacity: 0.8;
+}
+.open-chat__header span{ 
+    opacity: 0.6;
+}
+.open-chat__header i{
+    padding-left: 5px;
+}
+.open-post{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+.open-post__title{
+font-weight: 600;
+margin-bottom: 7px;
+    }
+    .open-post__hashtags{
+    text-transform: uppercase;
+    opacity: 0.6;
+     margin-bottom: 7px;}
+    .open-post__members{
+        display: flex;
+        align-items: center;
+    }
+    .open-post__members img{
+        width: 25px;
+        height: 25px;
+        border-radius: 10px;
+        margin-right: 9px;
+    }
+.open-post__member-count{
+    opacity: 0.5;
+    font-size: 16px;
+}
+.open-post__members .divider{
+    width: 1.5px;
+    height: 15px;
+    margin: 0 5px;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+.open-post__member-status{
+    color:#ff89d1 ;
+}
+.open-post__photo img{
+    width: 120px;
+    height: 120px;
+    border-radius: 20px;
+}
+.open-post__heart-count{
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 16px;
+    }
+    .open-post__photo{
+        position: relative;
+    }
+    .open-post__heart-count span{
+margin-left: 3px;
+    }
+
