--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -24,11 +24,23 @@
     display: flex;
     justify-content: space-between;
 }
+@keyframes notificationAnimation {
+0%{
+   transform: none;
+}
+50%{
+transform: translateY(-5px) rotatey(360deg);
+}
+100%{
+transform: none;
+}
+}
 .nav__notification{
  
     position: absolute;
     left: 25px;
     top:-23px;
+    animation:notificationAnimation 2s ease-in-out infinite;
 }
 .nav__dot{
     background-color: tomato;
@@ -38,4 +50,28 @@
     right: -8px;
     top: -14px;
     position: absolute;
+}
+
+@keyframes appearBtnAnimation {
+    from{
+opacity: 0;
+    }
+    to{
+transform: none;
+opacity: 1;
+    }
+}
+.nav__btn{
+    transform: translateY(50px);
+    opacity: 0;
+animation: appearBtnAnimation 0.5s  ease-in-out forwards;
+}
+.nav__btn:nth-child(2){
+animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3){
+    animation-delay: 0.5s;
+}
+.nav__btn:nth-child(4){
+    animation-delay: 0.8s;
 }
