--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -15,8 +15,116 @@ background-color: #abc1d1;
     z-index: 2;
 }
 .main-chat{
-    margin-top: 30px;
+    margin-top: 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #chat-screen .alt-header{
     z-index: 1;
+}
+.chat__timestamp{
+    color: white;
+    background-color: #92a4b2;
+border-radius: 25px;
+padding: 9px 18px;
+font-size: 15px;
+margin-bottom: 30px;
+}
+.massage-row{
+    width: 100%;
+    display: flex;
+    margin-bottom: 25px;
+}
+.massage-row img{
+    width: 47px;
+    height: 47px;
+    border-radius: 20px;
+    margin-right: 15px;
+}
+.massege__author{
+    display: block;
+    padding-bottom: 8px;
+}
+.masssge__bubble{
+    background-color: white;
+    padding: 12px 12px;
+    border-radius: 17px;
+    border-top-left-radius: 0px;
+    margin-right: 5px;
+    font-size: 18px;
+    font-weight: 600;
+}
+.message__info{
+    display: flex;
+    align-items: flex-end;
+}
+.massage__time,
+.massege__author{
+    opacity: 0.8;
+    font-size: 15px;
+}
+.massage-row__own{
+    justify-content: flex-end;
+}
+.massage-row__own .masssge__bubble{
+    background-color: var(--yellow);
+    border-top-right-radius: 0px;
+    border-top-left-radius: 17px;
+    margin-right: 0px;
+    margin-left: 5px;
+}
+.massage-row__own .message__info{
+    flex-direction: row-reverse;
+}
+.reply{
+    position: fixed;
+    bottom: 0%;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content:space-between ;
+    padding: 5px 25px;
+    box-sizing: border-box;
+    align-items: center;
+}
+.reply .reply__column:first-child{
+    width: 10%;
+}
+.reply .reply__column:last-child{
+    width: 90%;
+    position: relative;
+}
+.reply i{
+    opacity: 0.5;
+}
+.reply input{
+    padding: 10px;
+      width: 100%;
+  border:var(--main-border);
+  border-radius: 20px;
+}
+.reply__column:last-child > i,
+.reply__column:last-child button{
+    position: absolute;
+    right: -18px;
+    top: 4px;
+}
+.reply__column:last-child > i{
+    right: 25px;
+    top: 12px;
+}
+.reply__column button{
+    background-color: var(--yellow);
+    border: none;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%
+}
+.reply__column button i{
+    opacity: 1;
+}
+.reply__column button:focus,
+.reply__column button:active{
+    outline: none;
 }
