--- a/css/screens/settings.css
+++ b/css/screens/settings.css
@@ -14,3 +14,15 @@ color: rgba(0, 0, 0, 0.6);
 .settings__setting-column:last-child{
 opacity: 0.7;
 }
+.settings__setting__bottom{
+    padding: 20px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+    font-size: 22px;
+    display: flex;
+    align-items: center;
+}
+.settings__setting__bottom i{
+    margin-right: 18px;
+font-size: 25px;
+color: rgba(0, 0, 0, 0.6);
+}
