--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -19,3 +19,14 @@
     margin-left: 25px;
     color: #313131;
 }
+@keyframes rotateCog{
+    from{
+transform: none;
+    }
+    to{
+transform: rotatez(360deg);
+    }
+}
+.screen__header__icons .fa-cog:hover{
+animation: rotateCog 1s linear infinite;
+}
