--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,7 +1,7 @@
 
 #chat-screen{
 background-color: #abc1d1; 
-height: 1000vh;
+height: 500vh;
 }
 #chat-screen .alt-header,
 #chat-screen .status-bar{
@@ -14,11 +14,22 @@ background-color: #abc1d1;
 #chat-screen .status-bar{
     z-index: 2;
 }
+@keyframes fadeIn {
+    from{
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to{
+        transform: none;
+opacity: 1;
+    }
+}
 .main-chat{
-    margin-top: 3px;
+    margin-top: 1px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation:fadeIn 0.8s linear;
 }
 #chat-screen .alt-header{
     z-index: 1;
@@ -35,6 +46,7 @@ margin-bottom: 30px;
     width: 100%;
     display: flex;
     margin-bottom: 25px;
+   animation: massagleftemotion 1s ease-in-out forwards;
 }
 .massage-row img{
     width: 47px;
@@ -42,6 +54,29 @@ margin-bottom: 30px;
     border-radius: 20px;
     margin-right: 15px;
 }
+
+@keyframes massagleftemotion{
+    from{
+        opacity: 0;
+transform: translateX(-100px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+@keyframes massagrightemotion{
+    from{
+        opacity: 0;
+transform: translateX(100px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
 .massege__author{
     display: block;
     padding-bottom: 8px;
@@ -66,6 +101,7 @@ margin-bottom: 30px;
 }
 .massage-row__own{
     justify-content: flex-end;
+    animation: massagrightemotion 1s ease-in-out forwards;
 }
 .massage-row__own .masssge__bubble{
     background-color: var(--yellow);
@@ -87,6 +123,7 @@ margin-bottom: 30px;
     padding: 5px 25px;
     box-sizing: border-box;
     align-items: center;
+    transition: all 0.3s ease-in-out;
 }
 .reply .reply__column:first-child{
     width: 10%;
@@ -103,6 +140,7 @@ margin-bottom: 30px;
       width: 100%;
   border:var(--main-border);
   border-radius: 20px;
+  transition: all 0.3s ease-in-out;
 }
 .reply__column:last-child > i,
 .reply__column:last-child button{
@@ -127,4 +165,22 @@ margin-bottom: 30px;
 .reply__column button:focus,
 .reply__column button:active{
     outline: none;
+}
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile,
+.reply:focus-within button{
+    transition: opacity 0.3s ease-in-out;
+}
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile,
+.reply:focus-within button {
+    opacity: 0;}
+
+    .reply:focus-within input{
+    width: 90vw;
+    transform: translateX(-13%) translateY(-80px);
+}
+
+.reply:focus-within{
+    transform: translateY(80px);
 }
