--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -101,4 +101,21 @@ margin-bottom: 7px;
     .open-post__heart-count span{
 margin-left: 3px;
     }
-
+    @keyframes heartbeat{
+        0%{
+color: white;
+transform: none;
+        }
+        50%{
+color: #ff89d1;
+transform: scale(1.5);
+        }
+        100%{
+color: white;
+transform: none;
+        }
+    }
+    .open-post__heart-count:hover i{
+        will-change: transform;
+animation: heartbeat 1s linear infinite ;
+    }
